src/test/deca/context/invalid/intermediaire2/elseif/02condition_assign.deca
{
    int x;
    if (3 < 2) {
        print("Trop petit !");
    } else if ( x=2 ){
        print("Trop grand !");
    }
}